--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,15 +4,17 @@ version = "0.0.1"
 requires-python = ">=3.10"
 dependencies = [
   "python-bitcoinlib>=0.12",
-  "python-bitcoinrpc>=1.0",   # ←  NUEVO
+  "python-bitcoinrpc>=1.0",
+  "requests>=2.32",
+  "bitcoinlib>=0.6",
   "tqdm>=4.66",
   "click>=8.1",
   "pandas>=2.2",
   "pyarrow>=15",
 ]
-
 [project.scripts]
 bt-extract = "framework_bt.cli:main"
+bt-view    = "framework_bt.viewer:main"
 
 [tool.setuptools.packages.find]
 include = ["framework_bt"]
